--- a/src/components/Home/OutcomesDiagram.scss
+++ b/src/components/Home/OutcomesDiagram.scss
@@ -1,5 +1,13 @@
 .outcomes-diagram {
-  padding: 120px 0;
+  padding: 180px 0;
+
+  @include media-down(tablet) {
+    padding: 120px 0;
+  }
+
+  @include media-down(mobile) {
+    padding: 80px 0;
+  }
 
   .outcome-elaboration {
     .title {
