--- a/src/components/Home/CarbonEightIntro.scss
+++ b/src/components/Home/CarbonEightIntro.scss
@@ -1,5 +1,16 @@
 .carbon-eight-intro {
-  padding: 120px 0;
+  margin-top: -10px;
+  padding: 120px 0 180px;
+  position: relative;
+  z-index: 1;
+
+  @include media-down(tablet) {
+    padding: 80px 0 120px;
+  }
+
+  @include media-down(mobile) {
+    padding: 60px 0 80px;
+  }
   background-color: $earth-even-lighter;
 
   .wrapper {
