--- a/src/components/Home/SectionIntro.scss
+++ b/src/components/Home/SectionIntro.scss
@@ -1,7 +1,11 @@
 .section-intro {
   .container {
     background-color: $tertiary;
-    padding: 120px 0;
+    padding: 180px 0;
+
+    @include media-down(tablet) {
+      padding: 120px 0;
+    }
 
     @include media-down(mobile) {
       padding: 80px 0;
