--- a/src/pages/thank-you.scss
+++ b/src/pages/thank-you.scss
@@ -1,8 +1,18 @@
 .thank-you-page {
   .text-container {
+    padding: 200px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+
+    .title {
+      margin-bottom: 40px;
+    }
+
+    p {
+      @include h3();
+      margin-bottom: 30px;
+    }
   }
 }
