--- a/src/pages/404.scss
+++ b/src/pages/404.scss
@@ -4,10 +4,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
 
     .title {
       margin-bottom: 40px;
+      text-align: center;
     }
   }
 }
