--- a/src/pages/thank-you.scss
+++ b/src/pages/thank-you.scss
@@ -4,14 +4,16 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
 
     .title {
       margin-bottom: 40px;
+      text-align: center;
     }
 
     p {
       @include h3();
+      text-align: center;
       margin-bottom: 30px;
     }
   }
