Thank you page styled up

--- a/src/components/Donations/DonationModal.scss
+++ b/src/components/Donations/DonationModal.scss
@@ -75,12 +75,12 @@
   }
 }
 
-.donation-success {
+.success-message {
   display: flex;
   flex-direction: column;
   margin-bottom: 80px;
 
-  .donation-success-message {
+  .success-message-message {
     width: 100%;
     max-width: 400px;
     margin: 0 auto;
