--- a/src/pages/thank-you.scss
+++ b/src/pages/thank-you.scss
@@ -1,20 +1,17 @@
 .thank-you-page {
   .text-container {
     padding: 200px 0;
+
+    @include media-down(tablet) {
+      padding: 160px 0;
+    }
+
+    @include media-down(mobile) {
+      padding: 120px 0;
+    }
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    .title {
-      margin-bottom: 40px;
-      text-align: center;
-    }
-
-    p {
-      @include h3();
-      text-align: center;
-      margin-bottom: 30px;
-    }
   }
 }
