--- a/src/pages/404.scss
+++ b/src/pages/404.scss
@@ -1,14 +1,46 @@
 .four-oh-four-page {
   .text-container {
-    padding: 200px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 200px 0;
+
+    @include media-down(tablet) {
+      padding: 160px 0;
+    }
+
+    @include media-down(mobile) {
+      padding: 120px 0;
+    }
 
     .title {
+      @include h1();
       margin-bottom: 40px;
       text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .illustration {
+      width: 100%;
+      max-width: 545px;
+      height: 82vw;
+      max-height: 450px;
+      margin-bottom: 60px;
+
+      @include media-down(mobile) {
+        margin-bottom: 30px;
+      }
+    }
+
+    .four-oh-four-message {
+      @include h3();
+      text-align: center;
+      max-width: 400px;
+      margin: 0 auto 40px;
     }
   }
 }
