--- a/src/components/Home/CallToActionsBlock.scss
+++ b/src/components/Home/CallToActionsBlock.scss
@@ -4,7 +4,7 @@
     .container {
       padding: 120px 0 180px;
 
-      @include media-down(mobile) {
+      @include media-down(tablet) {
         padding: 80px 0 120px;
       }
     }
@@ -18,9 +18,9 @@
     padding-bottom: 120px;
     position: relative;
     z-index: 2;
+    margin-top: -120px;
 
-    @include media-down(mobile) {
-      margin-top: -0px;
+    @include media-down(tablet) {
       flex-direction: column;
       align-items: center;
       justify-content: center;
@@ -29,18 +29,22 @@
     }
 
     .call-to-action {
-      margin-top: -120px;
       width: calc((100% / 3) - 80px);
       position: relative;
       margin-right: 80px;
 
-      @include media-down(mobile) {
+      @include media-down(wrapper) {
+        width: calc((100% / 3) - 30px);
+        margin-right: 30px;
+      }
+
+      @include media-down(tablet) {
         width: 100%;
         margin: 0 0 20px;
       }
 
       &:last-child {
-        @include media-up(mobile) {
+        @include media-up(tablet) {
           margin-right: 0px;
         }
       }
@@ -57,7 +61,7 @@
         position: relative;
         z-index: 1;
 
-        @include media-down(mobile) {
+        @include media-down(tablet) {
           flex-direction: row;
           align-items: center;
           justify-content: space-between;
@@ -75,7 +79,7 @@
           @include h2();
           margin-bottom: 20px;
 
-          @include media-down(mobile) {
+          @include media-down(tablet) {
             margin-bottom: 0;
           }
         }
@@ -83,13 +87,13 @@
         .html-content {
           margin-bottom: 40px;
 
-          @include media-down(mobile) {
+          @include media-down(tablet) {
             display: none;
           }
         }
 
         .call-to-action-link {
-          @include media-down(mobile) {
+          @include media-down(tablet) {
             height: 50px;
             width: 50px;
             border-radius: 50%;
@@ -126,7 +130,7 @@
         height: 100%;
         z-index: -1;
 
-        @include media-down(mobile) {
+        @include media-down(tablet) {
           border-radius: 16px;
         }
       }
