Highlight animation in-view

--- a/src/components/Home/IssueBlocks.scss
+++ b/src/components/Home/IssueBlocks.scss
@@ -95,6 +95,7 @@
       }
 
       .title {
+        display: inline;
         @include h2();
         margin-bottom: 40px;
         text-align: center;
@@ -102,6 +103,24 @@
         @include media-down(tablet) {
           font-size: 28px;
           margin-bottom: 30px;
+        }
+
+        @include media-down(mobile) {
+          max-width: 350px;
+        }
+
+        span {
+          background: linear-gradient(to right, rgba($white ,0) 50%, rgba($tertiary, 1.0) 50%);
+          background-size: 200%;
+          background-position: 0 0;
+          transition-property: all;
+          transition-timing-function: ease-out;
+          transition-duration: 1s;
+          transition-delay: 0.5s;
+
+          &.visible {
+            background-position: -100% 0;
+          }
         }
       }
 
