--- a/src/components/Home/OutcomesDiagram.scss
+++ b/src/components/Home/OutcomesDiagram.scss
@@ -13,6 +13,20 @@
     .title {
       @include h2();
       margin-bottom: 20px;
+
+      span {
+        background: linear-gradient(to right, rgba($white ,0) 50%, rgba($tertiary, 1.0) 50%);
+        background-size: 200%;
+        background-position: 0 0;
+        transition-property: all;
+        transition-timing-function: ease-out;
+        transition-duration: 1s;
+        transition-delay: 0.5s;
+
+        &.visible {
+          background-position: -100% 0;
+        }
+      }
     }
   }
 
