--- a/src/components/Home/SolutionBlocks.scss
+++ b/src/components/Home/SolutionBlocks.scss
@@ -96,8 +96,23 @@
           margin-bottom: 40px;
 
           @include media-down(mobile) {
+            max-width: 350px;
             text-align: center;
             margin-bottom: 30px;
+          }
+
+          span {
+            background: linear-gradient(to right, rgba($white ,0) 50%, rgba($tertiary, 1.0) 50%);
+            background-size: 200%;
+            background-position: 0 0;
+            transition-property: all;
+            transition-timing-function: ease-out;
+            transition-duration: 1s;
+            transition-delay: 0.5s;
+
+            &.visible {
+              background-position: -100% 0;
+            }
           }
         }
 
