More NavigationMenu tweaks

--- a/src/components/Navigation/NavigationMenu.scss
+++ b/src/components/Navigation/NavigationMenu.scss
@@ -58,7 +58,8 @@
 
         @include media-down(mobile) {
           flex-direction: column;
-          justify-content: flex-start;
+          justify-content: center;
+          padding-bottom: 30px;
         }
 
         .navigation {
@@ -120,7 +121,7 @@
                     transition: width 0.3s ease-out;
 
                     @include media-down(mobile) {
-                      display: none;
+                      width: 0;
                     }
                   }
                 }
@@ -164,6 +165,8 @@
               &.active {
                 .nav-link {
                   span {
+                    // color: $grey;
+
                     &:after {
                       width: 100%;
                     }
