--- a/src/components/Home/OutcomesDiagram.scss
+++ b/src/components/Home/OutcomesDiagram.scss
@@ -30,87 +30,6 @@
     }
   }
 
-  .diagram {
-
-    .circle {
-      width: 650px;
-      height: 650px;
-      border-radius: 50%;
-      border: 3px $tertiary solid;
-      margin: 0 auto;
-      position: relative;
-
-      @include media-down(tablet) {
-        width: calc(60vw - 40px);
-        height: calc(60vw - 40px);
-      }
-
-
-      .outcome-buttons {
-        .outcome-selector {
-          position: absolute;
-          padding: 20px;
-
-          &:nth-child(1) {
-            top: 0;
-            left: 50%;
-            transform: translateY(-50%) translateX(-50%);
-          }
-          &:nth-child(2) {
-            top: 50%;
-            left: auto;
-            right: 0;
-            transform: translateY(-50%) translateX(50%);
-          }
-          &:nth-child(3) {
-            bottom: 0;
-            left: 50%;
-            transform: translateY(50%) translateX(-50%);
-          }
-          &:nth-child(4) {
-            top: 50%;
-            left: 0;
-            transform: translateY(-50%) translateX(-50%);
-          }
-        }
-      }
-
-      .outcome-illustration {
-        @include center-align(absolute);
-        width: 60%;
-        height: 60%;
-
-        svg {
-          width: 100%;
-          height: 100%;
-        }
-      }
-
-      .outcome-elaboration {
-        position: absolute;
-        top: auto;
-        left: auto;
-        bottom: 0;
-        right: 0;
-        width: 55%;
-        max-width: 400px;
-        background-color: $white;
-        transform: translateX(50%);
-        padding: 20px;
-
-        @include media-down(tablet) {
-          width: 65%;
-          transform: translateX(50%) translateY(20%);
-        }
-
-        @include media-down(small-tablet) {
-          width: 70%;
-          transform: translateX(50%) translateY(50%);
-        }
-      }
-    }
-  }
-
   .outcome-buttons {
     .outcome-selector {
       background-color: $white;
@@ -210,6 +129,88 @@
           width: 100%;
           fill: $secondary;
           transition: fill 0.3s ease;
+        }
+      }
+    }
+  }
+
+  .diagram {
+
+    .circle {
+      width: 650px;
+      height: 650px;
+      border-radius: 50%;
+      border: 3px $tertiary solid;
+      margin: 0 auto;
+      position: relative;
+      z-index: 6;
+
+      @include media-down(tablet) {
+        width: calc(60vw - 40px);
+        height: calc(60vw - 40px);
+      }
+
+
+      .outcome-buttons {
+        .outcome-selector {
+          position: absolute;
+          padding: 20px;
+
+          &:nth-child(1) {
+            top: 0;
+            left: 50%;
+            transform: translateY(-50%) translateX(-50%);
+          }
+          &:nth-child(2) {
+            top: 50%;
+            left: auto;
+            right: 0;
+            transform: translateY(-50%) translateX(50%);
+          }
+          &:nth-child(3) {
+            bottom: 0;
+            left: 50%;
+            transform: translateY(50%) translateX(-50%);
+          }
+          &:nth-child(4) {
+            top: 50%;
+            left: 0;
+            transform: translateY(-50%) translateX(-50%);
+          }
+        }
+      }
+
+      .outcome-illustration {
+        @include center-align(absolute);
+        width: 60%;
+        height: 60%;
+
+        svg {
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      .outcome-elaboration {
+        position: absolute;
+        top: auto;
+        left: auto;
+        bottom: 0;
+        right: 0;
+        width: 55%;
+        max-width: 400px;
+        background-color: $white;
+        transform: translateX(50%);
+        padding: 20px;
+
+        @include media-down(tablet) {
+          width: 65%;
+          transform: translateX(50%) translateY(20%);
+        }
+
+        @include media-down(small-tablet) {
+          width: 70%;
+          transform: translateX(50%) translateY(50%);
         }
       }
     }
