--- a/src/components/Home/OutcomesDiagram.scss
+++ b/src/components/Home/OutcomesDiagram.scss
@@ -76,6 +76,10 @@
         padding: 0 5px;
         transition: opacity 0.3s ease, padding 0.3s ease;
         padding: 0 5px;
+
+        @include media-down(mobile) {
+          display: none;
+        }
       }
 
       &.active {
