--- a/src/components/Donations/DonationTile.scss
+++ b/src/components/Donations/DonationTile.scss
@@ -46,7 +46,7 @@
   .button-container {
     display: flex;
     flex-direction: column;
-    padding: 40px 20px;
+    padding: 20px;
     background-color: $off-white;
     border: 3px solid $off-white;
     border-radius: 24px;
@@ -54,7 +54,7 @@
     transform: translateX(0) translateY(0);
 
     @include media-down(mobile) {
-      padding: 15px 10px 25px;
+      padding: 15px 10px;
     }
   }
 
