Stripe error visualisation

--- a/src/sass/base/__variables.scss
+++ b/src/sass/base/__variables.scss
@@ -38,7 +38,7 @@ $grey: #D8D8D8;
 ===============================================>>>>>*/
 $success: #5cb85c;
 $warning: #f0ad4e;
-$error: #d9534f;
+$error: #E36A3F;
 
 /*=============================================>>>>>
 = Social colours =
