--- a/src/components/Donations/DonationModal.scss
+++ b/src/components/Donations/DonationModal.scss
@@ -77,6 +77,20 @@
 
     button {}
   }
+
+  .error-message {
+    @include p1();
+    text-align: center;
+    color: $error;
+    display: block;
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto 30px;
+    padding: 20px;
+    border-radius: 16px;
+    background-color: $off-white;
+    border: 3px solid $tertiary;
+  }
 }
 
 .success-message {
