converted static mural components to use background-image for svg

--- a/src/components/Mural/CropScene.scss
+++ b/src/components/Mural/CropScene.scss
@@ -1,3 +1,10 @@
 .crop-scene {
-  
+  background-image: url('../../assets/images/Mural/crop-scene.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  &.mobile {
+    background-image: url('../../assets/images/Mural/crop-scene-mobile.svg');
+  }
 }
