--- a/src/components/Mural/RootsScene.scss
+++ b/src/components/Mural/RootsScene.scss
@@ -3,6 +3,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  background-color: $earth;
 
   &.mobile {
     background-image: url('../../assets/images/Mural/roots-scene-mobile.svg');
