Issues and Solutions now using bodymovin animations

--- a/src/components/Home/SolutionBlocks.scss
+++ b/src/components/Home/SolutionBlocks.scss
@@ -57,7 +57,7 @@
             margin: 0 auto 30px;
           }
 
-          svg {
+          .animation {
             @include center-align(absolute);
             width: 100%;
             height: 100%;
