--- a/src/components/Home/IssueBlocks.scss
+++ b/src/components/Home/IssueBlocks.scss
@@ -65,7 +65,7 @@
           margin: 0 auto 30px;
         }
 
-        .animation {
+        >div {
           @include center-align(absolute);
           width: 100%;
           height: 100%;
