--- a/src/components/Home/OutcomesDiagram.scss
+++ b/src/components/Home/OutcomesDiagram.scss
@@ -279,7 +279,7 @@
       height: 40%;
       margin: 0 auto -10vw;
 
-      @include media-down(small-mobile) {
+      @include media-down(mobile) {
         width: 70%;
         height: 70%;
       }
