--- a/src/components/Mural/ValleyScene.scss
+++ b/src/components/Mural/ValleyScene.scss
@@ -1,10 +1,15 @@
 .valley-scene {
-  background-image: url('../../assets/images/Mural/valley-scene.svg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  opacity: 0;
+  transition: opacity 0.2s ease-out;
 
-  &.mobile {
-    background-image: url('../../assets/images/Mural/valley-scene-mobile.svg');
+  &.loaded {
+    opacity: 1;
+    background-image: url('../../assets/images/Mural/valley-scene.svg');
+    &.mobile {
+      background-image: url('../../assets/images/Mural/valley-scene-mobile.svg');
+    }
   }
 }
