--- a/src/components/Mural/SoilScene.scss
+++ b/src/components/Mural/SoilScene.scss
@@ -1,4 +1,17 @@
 .soil-scene {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0;
+  transition: opacity 0.2s ease-out;
+
+  &.loaded {
+    opacity: 1;
+    background-image: url('../../assets/images/Mural/soil-scene.svg');
+    &.mobile {
+      background-image: url('../../assets/images/Mural/soil-scene-mobile.svg');
+    }
+  }
 
   #bee-one {
     animation: floatLeftRight 4s ease-out infinite;
