--- a/src/components/Mural/SoilScene.scss
+++ b/src/components/Mural/SoilScene.scss
@@ -4,6 +4,7 @@
   background-position: center;
   opacity: 0;
   transition: opacity 0.2s ease-out;
+  position: relative;
 
   &.loaded {
     opacity: 1;
@@ -13,11 +14,50 @@
     }
   }
 
-  #bee-one {
-    animation: floatLeftRight 4s ease-out infinite;
+  .bees {
+    @include center-align(absolute);
+    width: 100%;
+    height: 100%;
+
+    #bee-one {
+      animation: floatLeftRight 4s ease-out infinite;
+    }
+
+    #bee-two {
+      animation: floatUpDown 6s ease-in-out infinite;
+    }
   }
 
-  #bee-two {
-    animation: floatUpDown 6s ease-in-out infinite;
+  @keyframes floatUpDown {
+    0% {
+      transform: translateY(0px);
+    }
+    50% {
+      transform: translateY(-30px);
+    }
+    100% {
+      transform: translateY(0px);
+    }
+  }
+
+  @keyframes floatLeftRight {
+    0% {
+      transform: translateX(0px) translateY(0px);
+    }
+    20% {
+      transform: translateX(-10px) translateY(-10px);;
+    }
+    30% {
+      transform: translateX(-20px) translateY(0px);
+    }
+    40% {
+      transform: translateX(-30px) translateY(10px);
+    }
+    70% {
+      transform: translateX(-30px) translateY(10px);
+    }
+    100% {
+      transform: translateX(0px);
+    }
   }
 }
