--- a/src/components/SubscribeForm.scss
+++ b/src/components/SubscribeForm.scss
@@ -1,5 +1,9 @@
 .subscribe-form-block {
 
+  .block-title {
+
+  }
+
   .form-container {
     display: flex;
     flex-direction: column;
@@ -15,12 +19,13 @@
     }
 
     form {
+      width: 100%;
       max-width: 850px;
       margin: 0 auto;
       display: flex;
       flex-direction: row;
       justify-content: center;
-      align-items: center;
+      align-items: flex-end;
       position: relative;
 
       @include media-down(mobile) {
@@ -29,7 +34,7 @@
       }
 
       .field {
-        flex: 1;
+        flex: 1.5;
         position: relative;
         margin-bottom: 0;
         margin-right: 20px;
@@ -41,6 +46,39 @@
           margin-bottom: 20px;
         }
 
+        .field-label {
+          position: absolute;
+          transform: translateY(-100%);
+          top: -5px;
+          left: 5px;
+          opacity: 0;
+          font-size: 12px;
+          transition: opacity 0.3s ease, transform 0.3s ease;
+
+          @include media-down(mobile) {
+            top: 5px;
+            left: 22.5px;
+            font-size: 10px;
+            transform: translateY(50%);
+          }
+        }
+
+        &.has-value {
+          .field-label {
+            opacity: 1;
+
+            @include media-down(mobile) {
+              transform: translateY(0%);
+            }
+          }
+
+          input {
+            @include media-down(mobile) {
+              padding-top: 20px;
+            }
+          }
+        }
+
         input {
           width: 100%;
           @include h4();
@@ -50,7 +88,7 @@
           background-color: $tertiary;
           border-color: $tertiary;
           border-radius: 16px;
-          transition: color 0.3s ease, background-color 0.3s ease, border-color 0.3s ease;
+          transition: color 0.3s ease, background-color 0.3s ease, border-color 0.3s ease, padding 0.3s ease;
           box-sizing: border-box;
 
           &:active, &:focus {
