--- a/src/components/Home/IssueBlocks.scss
+++ b/src/components/Home/IssueBlocks.scss
@@ -65,10 +65,30 @@
           margin: 0 auto 30px;
         }
 
-        >div {
+        > div {
           @include center-align(absolute);
           width: 100%;
           height: 100%;
+          opacity: 0;
+          transition: opacity 0.3s ease;
+        }
+
+        &:before {
+          content: '';
+          @include center-align(absolute);
+          width: 100%;
+          height: 100%;
+          opacity: 1;
+          transition: opacity 0.3s ease;
+        }
+
+        &.visible {
+          > div {
+            opacity: 1;
+          }
+          &:before {
+            opacity: 0;
+          }
         }
       }
 
