--- a/src/components/Home/SolutionBlocks.scss
+++ b/src/components/Home/SolutionBlocks.scss
@@ -61,6 +61,25 @@
             @include center-align(absolute);
             width: 100%;
             height: 100%;
+            transition: opacity 0.3s ease;
+          }
+
+          &:before {
+            content: '';
+            @include center-align(absolute);
+            width: 100%;
+            height: 100%;
+            opacity: 1;
+            transition: opacity 0.3s ease;
+          }
+
+          &.visible {
+            > div {
+              opacity: 1;
+            }
+            &:before {
+              opacity: 0;
+            }
           }
         }
       }
