--- a/src/components/Home/IssueBlocks.scss
+++ b/src/components/Home/IssueBlocks.scss
@@ -78,6 +78,10 @@
           @include center-align(absolute);
           width: 100%;
           height: 100%;
+          background-image: url('../../assets/images/illustration-placeholder.svg');
+          background-size: contain;
+          background-repeat: no-repeat;
+          background-position: center;
           opacity: 1;
           transition: opacity 0.3s ease;
         }
