--- a/src/components/Home/OutcomesDiagram.scss
+++ b/src/components/Home/OutcomesDiagram.scss
@@ -263,7 +263,7 @@
         }
 
         &.visible {
-          > div {
+          svg {
             opacity: 1;
           }
           &:before {
@@ -306,6 +306,30 @@
       svg {
         width: 100%;
         height: 100%;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+      }
+
+      &:before {
+        content: '';
+        @include center-align(absolute);
+        width: 70%;
+        height: 70%;
+        background-image: url('../../assets/images/outcome-placeholder.svg');
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        opacity: 1;
+        transition: opacity 0.3s ease;
+      }
+
+      &.visible {
+        svg {
+          opacity: 1;
+        }
+        &:before {
+          opacity: 0;
+        }
       }
     }
 
