--- a/src/components/Mural/HomeMural.scss
+++ b/src/components/Mural/HomeMural.scss
@@ -7,6 +7,22 @@
     padding-top: calc(#{$header-height-mobile} + 200px);
   }
 
+  .mural-components {
+    animation-name: revealComponents;
+    animation-fill-mode: forwards;
+    animation-duration: 0.3s;
+    animation-timing-function: ease-out;
+
+    @keyframes revealComponents {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
+    }
+  }
+
   .parallax {
     will-change: transform;
     transform-style: flat;
