Try make parallax more performant with background-size: contain

--- a/src/components/Mural/FarmScene.scss
+++ b/src/components/Mural/FarmScene.scss
@@ -1,5 +1,5 @@
 .farm-scene {
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   background-image: url('../../assets/images/Mural/farm-scene.svg');
