--- a/src/components/Mural/RootsScene.scss
+++ b/src/components/Mural/RootsScene.scss
@@ -1,5 +1,5 @@
 .roots-scene {
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   background-color: $earth;
