--- a/src/components/Mural/ValleyScene.scss
+++ b/src/components/Mural/ValleyScene.scss
@@ -1,5 +1,5 @@
 .valley-scene {
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   background-image: url('../../assets/images/Mural/valley-scene.svg');
