--- a/src/components/Mural/CropScene.scss
+++ b/src/components/Mural/CropScene.scss
@@ -1,5 +1,5 @@
 .crop-scene {
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   background-image: url('../../assets/images/Mural/crop-scene.svg');
