--- a/src/components/Mural/SoilScene.scss
+++ b/src/components/Mural/SoilScene.scss
@@ -1,6 +1,6 @@
 .soil-scene {
   position: relative;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   background-image: url('../../assets/images/Mural/soil-scene.svg');
