--- a/src/components/Mural/FarmScene.scss
+++ b/src/components/Mural/FarmScene.scss
@@ -1,9 +1,10 @@
 .farm-scene {
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   background-image: url('../../assets/images/Mural/farm-scene.svg');
-  &.mobile {
+
+  @include media-down(mobile) {
     background-image: url('../../assets/images/Mural/farm-scene-mobile.svg');
   }
 }
