--- a/src/components/Mural/SoilScene.scss
+++ b/src/components/Mural/SoilScene.scss
@@ -5,7 +5,7 @@
   background-position: center;
   background-image: url('../../assets/images/Mural/soil-scene.svg');
 
-  @include media-down(mobile) {
+  &.mobile {
     background-image: url('../../assets/images/Mural/soil-scene-mobile.svg');
   }
 
