--- a/src/components/Mural/ValleyScene.scss
+++ b/src/components/Mural/ValleyScene.scss
@@ -4,7 +4,7 @@
   background-position: center;
   background-image: url('../../assets/images/Mural/valley-scene.svg');
 
-  @include media-down(mobile) {
+  &.mobile {
     background-image: url('../../assets/images/Mural/valley-scene-mobile.svg');
   }
 }
