Change JS responsive conditional renders to css media queries @HomeMural

--- a/src/components/Mural/RootsScene.scss
+++ b/src/components/Mural/RootsScene.scss
@@ -5,7 +5,7 @@
   background-color: $earth;
   background-image: url('../../assets/images/Mural/roots-scene.svg');
 
-  &.mobile {
+  @include media-down(mobile) {
     background-image: url('../../assets/images/Mural/roots-scene-mobile.svg');
   }
 }
