--- a/src/components/Mural/CropScene.scss
+++ b/src/components/Mural/CropScene.scss
@@ -4,7 +4,7 @@
   background-position: center;
   background-image: url('../../assets/images/Mural/crop-scene.svg');
 
-  &.mobile {
+  @include media-down(mobile) {
     background-image: url('../../assets/images/Mural/crop-scene-mobile.svg');
   }
 }
