--- a/src/components/SubscribeForm.scss
+++ b/src/components/SubscribeForm.scss
@@ -29,8 +29,8 @@
       position: relative;
 
       @include media-down(mobile) {
-        width: 100%;
         flex-direction: column;
+        align-items: center;
       }
 
       .field {
