--- a/src/components/common/CurlyDivider.scss
+++ b/src/components/common/CurlyDivider.scss
@@ -3,11 +3,21 @@
   width: 100%;
   height: 2.5vw;
   position: relative;
+  overflow: hidden;
+  margin-top: -1px;
+
+  @include media-down(mobile) {
+    height: 6.5vw
+  }
 
   svg {
     @include horizontal-align(absolute);
     top: 0;
     height: 100%;
     width: 100%;
+
+    @include media-down(mobile) {
+      transform: scale(2);
+    }
   }
 }
